# Sudoku_Rust

./: .gitignore  Cargo.toml  README.md
data/: sudoku_small.csv  testdata.csv
src/: Example_Field.rs  field.rs  fill_sudoku_template.rs  main.rs  sudoku_easy_1.rs
