[package]
name = "sudoku"
version = "0.1.0"
authors = ["Jonathan Christoph Klimt <jonathan.klimt@rwth-aachen.de>"]

[dependencies]


# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`