[package]
name = "sudoku"
version = "0.1.0"
authors = ["Jonathan Klimt <jonathan.klimt@rwth-aachen.de>"]

[dependencies]
csv = "1.0.0-beta.5"
time = "0.1"
termion = "1.5"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 3  # Controls the --opt-level the compiler builds with
debug = false # Controls whether the compiler passes `-g`